Improved the code for final release